2006-01-23  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java
	(split): Should not use createLeafElement and createBranchElement here.
	We should just instaniate the LeafElements and BranchElements instead 
	to avoid the case where create*Element is overridden.

2006-01-23  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java
	(insertFirstContentTag): Moved check outside of if-statement.
	This should be checked before creating the new leaf element.
	(insertFracture): Fixed check to prevent an NPE. The previous
	leaf should only be recreated if it has been created by
	insertFirstContentTag. Also, fixed up code: if the endOffset is
	greater than the offset, then we need to create a temp leaf
	as a place holder. Otherwise, the leaf elements should be
	created normally.

2006-01-23  Gary Benson  <gbenson@redhat.com>

	* java/net/SocketPermission.java: Almost completely rewritten.

2006-01-23  Lillian Angel  <langel@redhat.com>
	
	* javax/swing/text/DefaultStyledDocument.java
	(insertFracture): Set temp leaf's attributes to prevent an NPE.

2006-01-23  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java:
	Formatted ElementBuffer and added new fields.
	(remove): Added check to determine if length is 0.
	(insertFirstContentTag): Initialized firstCreated to the element that is created 
	by the first tag encountered. Removed check in JoinPreviousDirection case, no
	longer needed. In OriginateDirection case, added a loop to remove all old leafs
	that have been recreated.
	(insertContentTag): Cleaned up code. Removed checks that did not do anything.
	(insertFracture): Fixed up code, removed unneeded objects and checks. Added
	FIXME tags to the lines that need to be rewritten.	

2006-01-23  Mark Wielaard  <mark@klomp.org>

	* examples/Makefile.am: Add support for fastjar.

2006-01-23  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/regexp/REToken.java(empty): Made Cloneable.